--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css"
+
+html, body
+  font-family: 'Helvetica', 'Verdana', sans-serif
+  font-weight: 400
+  font-display: optional
+  color: #444
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
+
+html
+  overflow: scroll
+
+body
+  background: #ececec
+
+.header
+  width: 100%
+  height: 40px
+  color: #FFF
+  background: #3F51B5
+  position: fixed
+  font-size: 20px
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 2px 9px 1px rgba(0, 0, 0, 0.12), 0 4px 2px -2px rgba(0, 0, 0, 0.2)
+  padding: 16px 16px 0 16px
+  z-index: 1000
+
+
+.header__title
+  font-weight: 400
+  font-size: 20px
+  margin: 0
+  -webkit-box-flex: 1
+  -webkit-flex: 1
+  -ms-flex: 1
+  flex: 1
