--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,8 +22,8 @@
 
   </div>
   <ul>
-    <li class="text" *ngFor="let item of items | async">
-      {{item.test}}
+    <li class="text" *ngFor="let c of collabs">
+      {{c.nom}} {{c.prenom}}
     </li>
   </ul>
 
