--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,17 @@
-<div>
+<!--<div>
   <header class="header">
     <h1 class="header__title">Sfeir'Athlon</h1>
-  </header>
-</div>
 
-<div style="padding-top: 60px">
+  </header>
+</div>-->
+
+<mat-toolbar color="primary">
+  <span>Sfeir'Athlon</span>
+  <span class="example-spacer"></span>
+  <button mat-button (click)="openDialog()">Réglement</button>
+</mat-toolbar>
+
+<div style="padding-top: 0px">
   <mat-card class="card-hover" *ngFor="let c of teamLeaders">
     <app-competitor [teamLeader]="c"></app-competitor>
   </mat-card>
