--- a/src/app/components/leaderboard/leaderboard.component.html
+++ b/src/app/components/leaderboard/leaderboard.component.html
@@ -1,3 +1,3 @@
-<div style="padding-top: 0px">
+<div id="leaderboard-container" fxLayout="column" fxLayoutGap="10px">
   <app-competitor *ngFor="let teamLeader of teamLeaders | async" [teamleader]="teamLeader"></app-competitor>
 </div>
