--- a/src/styles.sass
+++ b/src/styles.sass
@@ -5,6 +5,7 @@
 @import "~prismjs/themes/prism.css"
 
 html, body
+  min-height: 100%
   font-family: 'Helvetica', 'Verdana', sans-serif
   font-weight: 400
   font-display: optional
