--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar id="toolbar" color="primary">
   <span>Sfeir'Athlon</span>
   <span class="example-spacer"></span>
   <button mat-button (click)="openDialog()">Réglement</button>
