--- a/src/app/components/leaderboard/leaderboard.component.html
+++ b/src/app/components/leaderboard/leaderboard.component.html
@@ -1,3 +1,3 @@
 <div id="leaderboard-container" fxLayout="column" fxLayoutGap="10px">
-  <app-competitor *ngFor="let teamLeader of teamLeaders | async" [teamleader]="teamLeader"></app-competitor>
+  <app-competitor *ngFor="let teamLeader of tls" [teamleader]="teamLeader"></app-competitor>
 </div>
