refactor event rank

--- a/src/app/components/competitor/competitor.component.html
+++ b/src/app/components/competitor/competitor.component.html
@@ -1,3 +1,4 @@
+<script src="../../models/ranked-teamleader.ts"></script>
 <mat-card>
   <mat-card-header>
     <div mat-card-avatar [style.height]="'85px'" [style.width]="'85px'" [style.background-image]="photoUrl"
