--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -1,3 +1,3 @@
 <div id="events-container" fxLayout="column" fxLayoutGap="10px">
-  <app-event *ngFor="let event of (events | async | events)" [event]="event"></app-event>
+  <app-event *ngFor="let event of (events | async)" [event]="event"></app-event>
 </div>
