--- a/src/app/components/competitor/competitor.component.html
+++ b/src/app/components/competitor/competitor.component.html
@@ -1,7 +1,11 @@
 <script src="../../models/ranked-teamleader.ts"></script>
 <mat-card>
   <mat-card-header>
-    <div mat-card-avatar [style.height]="'85px'" [style.width]="'85px'" [style.background-image]="photoUrl"
+    <div mat-card-avatar
+         [style.height]="'85px'"
+         [style.width]="'85px'"
+         [style.background-image]="photoUrl"
+         [style.background-position]="'center'"
          [style.background-size]="'cover'"></div>
     <mat-card-title style="font-size: 20px">{{teamLeader?.firstname}} {{teamLeader?.lastname}}</mat-card-title>
     <mat-card-subtitle style="font-size: 15px">Classement : {{teamLeader?.classement}} - {{teamLeader?.points}} points</mat-card-subtitle>
