--- a/src/app/components/competitor/competitor.component.html
+++ b/src/app/components/competitor/competitor.component.html
@@ -7,7 +7,7 @@
          [style.background-image]="photoUrl"
          [style.background-position]="'center'"
          [style.background-size]="'cover'"></div>
-    <mat-card-title style="font-size: 20px">{{teamLeader?.firstname}} {{teamLeader?.lastname}}</mat-card-title>
+    <mat-card-title style="font-size: 20px">{{teamLeader?.displayName}}</mat-card-title>
     <mat-card-subtitle style="font-size: 15px">Classement : {{teamLeader?.classement}} - {{teamLeader?.points}} points</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
