displayName in event

--- a/src/app/components/event-rank/event-rank.component.html
+++ b/src/app/components/event-rank/event-rank.component.html
@@ -1,3 +1,3 @@
 <div>
-  {{eventRank.rank}}. {{eventRank.teamleader.firstname}} {{eventRank.teamleader.lastname}} - {{eventRank.points}} points
+  {{eventRank.rank}}. {{eventRank.teamleader.displayName}} - {{eventRank.points}} points
 </div>
