--- a/src/app/components/event-rank/event-rank.component.html
+++ b/src/app/components/event-rank/event-rank.component.html
@@ -1,3 +1,14 @@
-<div>
-  {{eventRank.rank}}. {{eventRank.teamleader.displayName}} - {{eventRank.points}} points
+<div class='table'>
+  <div class='cell'
+    [style.height]="'42px'"
+    [style.width]="'42px'"
+    [style.background-image]="photoUrl"
+    [style.background-position]="'center'"
+    [style.background-size]="'cover'"
+    [style.border-radius]="'50%'"
+  >
+  </div>
+  <div class='cell' style="padding-left: 10px">
+    {{eventRank.rank}}. {{eventRank.teamleader.displayName}} - {{eventRank.points}} points
+  </div>
 </div>
