--- a/src/app/components/competitor-events-dialog/competitor-events-dialog.component.sass
+++ b/src/app/components/competitor-events-dialog/competitor-events-dialog.component.sass
@@ -1,1 +1,10 @@
+.table
+  display: table
+  padding-bottom: 10px
 
+.cell
+  display: table-cell
+  vertical-align: middle
+  padding: 10px
+  font-size: 20px
+  font-weight: bold
