--- a/src/app/components/competitor-events-dialog/competitor-events-dialog.component.html
+++ b/src/app/components/competitor-events-dialog/competitor-events-dialog.component.html
@@ -13,10 +13,10 @@
   </div>
 </div>
 <div mat-dialog-content fxLayout="column" fxLayoutGap="10px">
-  <mat-card *ngFor="let e of (events | async)">
+  <mat-card *ngFor="let e of (events | async | filterTeamLeaderEvent)">
     <mat-card-header>
       <mat-card-title style="font-size: 20px">{{e.name}}</mat-card-title>
-      <mat-card-subtitle style="font-size: 15px">Classement : {{e.classement.rank}} - {{e.classement.points}} points
+      <mat-card-subtitle style="font-size: 15px">Classement : {{e.classement?.rank}} - {{e.classement?.points}} points
       </mat-card-subtitle>
     </mat-card-header>
   </mat-card>
