--- a/src/app/components/competitor-events-dialog/competitor-events-dialog.component.html
+++ b/src/app/components/competitor-events-dialog/competitor-events-dialog.component.html
@@ -1,28 +1,27 @@
 <div class='table'>
-  <div class='cell'
-       [style.height]="'42px'"
-       [style.width]="'42px'"
+
+  <div id='picture'
        [style.background-image]="photoUrl"
-       [style.background-position]="'center'"
-       [style.background-size]="'cover'"
-       [style.border-radius]="'50%'"
   >
+
   </div>
-  <div class='cell' style="padding-left: 10px">
+  <div id='name'>
     {{displayName}}
   </div>
+  <div id="chartContainer">
+  <div id='chart' style="width: 40%">
+    <canvas baseChart
+            [chartType]="'line'"
+            [datasets]="chartData"
+            [labels]="chartLabels"
+            [options]="chartOptions"
+            [legend]="true"
+    >
+    </canvas>
+  </div>
+  </div>
 </div>
-<div id='chart' style="width: 40%;">
-  <canvas #baseChart="base-chart"
-          baseChart
-          [chartType]="'line'"
-          [datasets]="chartData"
-          [labels]="chartLabels"
-          [options]="chartOptions"
-          [legend]="true"
-         >
-  </canvas>
-</div>
+
 <div mat-dialog-content fxLayout="column" fxLayoutGap="10px">
   <mat-card *ngFor="let e of (events | async | filterTeamLeaderEvent)">
     <mat-card-header>
