fix resize. Refactor chart implementation

--- a/src/app/components/competitor-events-dialog/competitor-events-dialog.component.html
+++ b/src/app/components/competitor-events-dialog/competitor-events-dialog.component.html
@@ -9,16 +9,15 @@
     {{displayName}}
   </div>
   <div id="chartContainer">
-  <div id='chart' style="width: 40%">
-    <canvas baseChart
-            [chartType]="'line'"
-            [datasets]="chartData"
-            [labels]="chartLabels"
-            [options]="chartOptions"
-            [legend]="true"
-    >
-    </canvas>
-  </div>
+    <div id='chart' style="width: 40%">
+      <canvas baseChart
+              [chartType]="'line'"
+              [datasets]="chartData"
+              [labels]="chartLabels"
+              [options]="chartOptions"
+              [legend]="true">
+      </canvas>
+    </div>
   </div>
 </div>
 
