classement par sfeirien

--- a/src/app/components/competitor-events-dialog/competitor-events-dialog.component.sass
+++ b/src/app/components/competitor-events-dialog/competitor-events-dialog.component.sass
@@ -1,3 +1,7 @@
+.mat-dialog-content
+  padding-top: 10px
+  padding-bottom: 10px
+
 .table
   display: flex
   padding-bottom: 10px
@@ -25,10 +29,9 @@
   font-weight: bold
 
 #chartContainer
-    flex: 3
-    margin-left: 50px
-    position: relative
-
+  flex: 3
+  margin-left: 50px
+  position: relative
 
 @media (max-width: 1100px)
   .table
