--- a/src/app/components/rules-dialog/rules-dialog.component.html
+++ b/src/app/components/rules-dialog/rules-dialog.component.html
@@ -1,7 +1,8 @@
 <div id="rules">
   <mat-card>
     <mat-card-content>
-      <div Markdown path="rules/rules.md"></div>
+      <!-- <div Markdown path="rules/rules.md"></div> -->
+      <div NgxMd path="rules/rules.md"></div>
     </mat-card-content>
   </mat-card>
 </div>
